@@ -334,9 +334,14 @@
 				useglobal="true"
 				extension="com_content" view="article" />
 
-		</fieldset>
 
+		</fieldset>
 	</fields>
+			<field name="xreference" type="text"
+				label="JFIELD_KEY_REFERENCE_LABEL"
+				description="JFIELD_KEY_REFERENCE_DESC" 
+				class="inputbox" size="20" />
+
 
 	<fields name="metadata">
 
