@@ -154,6 +154,8 @@ JFIELD_BASIS_LOGOUT_DESCRIPTION_SHOW_DESC="Show or Hide Logout Description"
 JFIELD_BASIS_LOGOUT_DESCRIPTION_SHOW_LABEL="Logout Text"
 JFIELD_CATEGORY_DESC="The category that this item is assigned to."
 JFIELD_ENABLED_DESC="The enabled status of this item"
+JFIELD_KEY_REFERENCE_DESC="Used to store information referring to an external resource"
+JFIELD_KEY_REFERENCE_LABEL="Key Reference"
 JFIELD_LANGUAGE_DESC="Assign a language to this article."
 JFIELD_LANGUAGE_LABEL="Language"
 JFIELD_LOGIN_IMAGE_DESC="Image to display on login page"
